--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.63.6"
+    "sass": "^1.63.6",
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
