--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.1",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
     "sass": "^1.63.6",
     "typescript": "^5.1.6"
   },
