--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/material": "^5.14.0",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.1",
     "axios": "^1.4.0",
